# SmartDownloader

./: .dockerignore  .gitignore  AUTO_COOKIES.md  CHANGELOG.md  CODE_STYLE_REPORT.md  CONFIG.md  Dockerfile  LICENSE  Makefile  README.TXT  README.md  README.md.bak  USAGE.md  analyze_youtube_audio.py  auto_cookies.py  celery_manager.py  celery_monitor.py  config.yaml  config_manager.py  conftest.py  cookies.cache.txt  cookies.txt  cookies.txt.backup  debug_xcom.py  docker-compose.yml  downloader.py  downloader.py.bak  downloader_backup.py  handlers.py  main.py  optimization_suggestions.js  pyproject.toml  pytest.ini  requirements.txt  requirements_new.txt  run_local_tests.sh  start_all_services.py  start_celery_beat.py  start_celery_worker.py  start_web_server.py  (+14 more)
core/: __init__.py  command_builder.py  cookies_manager.py  error_handler.py  exceptions.py  file_processor.py  format_analyzer.py  retry_manager.py  subprocess_manager.py  subprocess_progress_handler.py
docs/: CELERY_GUIDE.md  DIRECT_STREAM_OPTIMIZATION.md  DOWNLOAD_MODE_APPLICABILITY.md  DOWNLOAD_SPEED_OPTIMIZATION.md  FILE_MANAGEMENT_GUIDE.md  METADATA_EMBEDDING_GUIDE.md  SMART_DOWNLOAD_TECHNICAL_GUIDE.md  TEMP_FILE_MANAGEMENT.md  TEST_GUIDE.md  VIDEO_FORMAT_FILTERING.md  celery-redis-optimization.md
scripts/: analyze_youtube_audio.py  celery_manager.py  celery_monitor.py  start_all_services.py  start_web_server.py  temp_file_manager.py  temp_utils.sh
static/: common.js  download.html  download.js  index.html  script.js  service-worker.js
tests/: config.yaml  debug_xcom.py  test_audio_debug.py  test_audio_mp4.py  test_audio_selection.py  test_celery_optimization.py  test_cleanup.py  test_command_builder.py  test_description_simplify.py  test_downloader.py  test_eta.py  test_failure_ui_backend.py  test_find_mp4.py  test_format_validation.py  test_lightweight_cleanup.py  test_main_api.py  test_real_youtube_data.py  test_resolution_count.py  test_server.py  test_simple_frontend.py  test_smart_download_complete.py  test_url_identifier.py  (+4 more)
(+7 files in other folders)
